<resources>
    <string name="app_name">RecipeApp</string>
    <string name="title_categories">Категории</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_image_category">Изображение категории</string>
    <string name="title_burger_category">Бургеры</string>
    <string name="title_ingredients">Ингредиенты</string>
    <string name="title_cooking_method">Способ приготовления</string>
    <string name="title_portion_count">Порции: </string>
    <string name="title_favorites_recipe_empty">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="fragment_list_category">Fragment List Category</string>
    <string name="fragment_favorite">Fragment Favorite</string>
    <string name="fragment_recipes_list">Recipes list fragment</string>
    <string name="fragment_recipe">Recipe fragment</string>
    <string name="content_description_image">Изображение</string>
    <string name="content_description_favorite_button">Кнопка добавить в избранное</string>
    <string name="content_description_favorite_header_image">Изображение избранного</string>
    <string name="title_activity_compose_main">ComposeMainActivity</string>
</resources>